--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,3 +20,14 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: CopyPublishBuildArtifacts@1
+  inputs:
+    Contents: '**/*.war'
+    ArtifactName: '$(build.artifactstagingdirectory)'
+    ArtifactType: 'Container'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'warfile'
+    publishLocation: 'Container'
