--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,11 +20,12 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+
 - task: CopyPublishBuildArtifacts@1
   inputs:
     Contents: '**/*.war'
     ArtifactName: '$(build.artifactstagingdirectory)'
-    ArtifactType: 'Container'
+    ArtifactType: 'FilePath'
 
 - task: PublishBuildArtifacts@1
   inputs:
