--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -21,10 +21,10 @@ steps:
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
 
-- task: CopyPublishBuildArtifacts@1
+- task: CopyFiles@2
   inputs:
     Contents: '**/*.war'
-    ArtifactName: '$(build.artifactstagingdirectory)'
+    TargetFolder: '$(build.artifactstagingdirectory)'
 
 
 - task: PublishBuildArtifacts@1
